# fastalign

./: CMakeLists.txt  README.md  main.cpp  notes.txt
scripts/: build.bat  build.sh  clean.bat  clean.sh  generateDotPlot2  make.bat  plot  rebuild.bat  rebuild.sh  testrun.sh
src/: FASTARead.cpp  FASTARead.h  main.cpp
src/FASTARead/: CMakeLists.txt  FASTARead.cpp  FASTARead.h
src/Sweeper/: CMakeLists.txt  Sweeper.cpp  Sweeper.h
src/align/: CMakeLists.txt  align.cpp  align.h
src/config/: CMakeLists.txt  config.hpp
src/mapper/: CMakeLists.txt  mapper.cpp  mapper.h  mapper.hpp
src/statistics/: CMakeLists.txt  statistics.cpp  statistics.hpp
src/types/: CMakeLists.txt  types.cpp  types.h
src/winnowing/: CMakeLists.txt  winnowing.cpp  winnowing.h  winnowing.hpp
src/winnowing_dac/: CMakeLists.txt  winnowing.cpp  winnowing.hpp
src/winnowing_mate/: CMakeLists.txt  winnowing.cpp  winnowing.hpp
tests/: CMakeLists.txt  mapper_test.cpp  statistics_test.cpp  sweeper_test.cpp  winnowing_test.cpp
